--- a/index.html
+++ b/index.html
@@ -18,5 +18,20 @@
     </ul>
   </h1>
 
+
+  <nav>
+    <ul>
+      <li><a href="">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a><a href="">
+          <span></span>
+          <span></span>
+          <span></span>
+        </a></li>
+    </ul>
+  </nav>
+
 </body>
 </html>
