--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     </ul>
   </h1>
 
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+  <section></section>
+
 </body>
 </html>
