--- a/app/index.html
+++ b/app/index.html
@@ -19,8 +19,8 @@
   </head>
   <body class="page">
     <div class="header">
-      <div class="container-fluid">
-        <div class="row">
+      <div class="header__container-fluid">
+        <div class="header__row">
           <div class="header__gamburger">
             <div class="menu">
               <div class="menu__container">
@@ -46,37 +46,56 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="header__gamburger">
-            <div class="menu">
-              <div class="menu__container">
-                <div class="menu-item"><i class="menu-item__icon mdi mdi-menu"></i>
+        <div class="header__row logoCenter">
+          <div class="header__logo">
+            <div class="logo">
+              <div class="logo__container">
+                <div class="logo-item">
+                  <p class="logo-item__text">
+                     Psychology
+                  </p>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+        <div class="header__row">
           <div class="header__swipe">
             <div class="swipe">
               <div class="swipe__container">
-                <div class="swipe-item">
-                  <div class="swipe-item__icon active">
-                  </div>Главная страница
+                <div class="swipe-item active">
+                  <div class="swipe-item__icon">
+                  </div><a class="swipe-item__text" href="#">Главная страница</a>
                 </div>
                 <div class="swipe-item">
                   <div class="swipe-item__icon">
-                  </div>Hot news
+                  </div><a class="swipe-item__text">Hot news</a>
                 </div>
                 <div class="swipe-item">
                   <div class="swipe-item__icon">
-                  </div>About me
+                  </div><a class="swipe-item__text">About me</a>
                 </div>
                 <div class="swipe-item">
                   <div class="swipe-item__icon">
-                  </div>Документы
+                  </div><a class="swipe-item__text">Документы</a>
                 </div>
                 <div class="swipe-item">
                   <div class="swipe-item__icon">
-                  </div>Контакты
+                  </div><a class="swipe-item__text">Контакты</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="header__swipeCount">
+            <div class="swipeCount">
+              <div class="swipeCount__container">
+                <div class="swipeCount-item">
+                  <div class="swipeCount-item__icon">
+                  </div>
+                </div>
+                <div class="swipeCount-item">
+                  <p class="swipeCount-item__text active">1
+                  </p>
                 </div>
               </div>
             </div>
